# RiskAnalyst

./: .gitignore  CMakeLists.txt  README.md  notebook.ipynb
include/: Config.hpp  Types.hpp
include/benchmark/: BenchmarkPipeline.hpp  GpuDetector.hpp
include/cuda/: CudaEngine.cuh  CudaEngineOptimized.cuh
include/finance/: CpuOpenMPEngine.hpp  CpuSequentialEngine.hpp  MonteCarloEngine.hpp  OptionPricer.hpp
include/statistics/: RiskMetricsCalculator.hpp
kernels/: CudaEngine.cu  CudaEngineOptimized.cu
src/: main.cpp
src/benchmark/: BenchmarkPipeline.cpp  GpuDetector.cpp
src/finance/: CpuOpenMPEngine.cpp  CpuSequentialEngine.cpp  OptionPricer.cpp
src/statistics/: RiskMetricsCalculator.cpp
tests/: CMakeLists.txt  test_cuda.cpp  test_finance.cpp  test_main.cpp  test_statistics.cpp
visualization/: generate_plots.py
